Test/git-issues/git-issue-697c.dfy.expect
git-issue-697c.dfy(18,15): Error: 'c' has been lately inferred to be of the subset type EvenCell which has a non-compilable constraint, which prevents this map comprehension of Cell to be compiled. If you really want the verifier to check it, please explicitely annotate the bound variable (c: EvenCell). The next error will explain why the constraint is not compilable.
git-issue-697c.dfy(9,26): Error: function calls are allowed only in specification contexts (consider declaring the function a 'function method')
git-issue-697c.dfy(19,35): Error: EvenCell is a subset type and its constraint is not compilable, hence it cannot yet be used as the type of a bound variable in map comprehension. The next error will explain why the constraint is not compilable.
git-issue-697c.dfy(9,26): Error: function calls are allowed only in specification contexts (consider declaring the function a 'function method')
git-issue-697c.dfy(20,18): Error: EvenCell is a subset type and its constraint is not compilable, hence it cannot yet be used as the type of a bound variable in forall expression. The next error will explain why the constraint is not compilable.
git-issue-697c.dfy(9,26): Error: function calls are allowed only in specification contexts (consider declaring the function a 'function method')
6 resolution/type errors detected in git-issue-697c.dfy
